[package]
name = "curseforge-modpack-downloader"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/curseforge-modpack-downloader"
readme = "README.md"
license = "GPL-3.0"
keywords = [
    "escl",
    "scan"
]
categories = ["command-line-utilities"]
description = """
Tool for downloading modpacks from CurseForge writen in Rust
"""
edition = "2018"

# Profiles
[profile.dev]
opt-level = 2
panic = "abort"

[profile.release]
debug = false
codegen-units = 1
lto = true

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
reqwest = { version = "0.10.0", features = ["blocking"] }

clap = "2.33.0"
html5ever = "0.25.1"
cloudflare-bypasser = "0.1.5"
